fix: adjust styling for Button, DialogRules, and PiecesContainer
- Remove box-shadow from Button component
- Add min-height to DialogRules overlay to prevent layout issues
- Remove list styling from PiecesContainer to eliminate default li bullets

--- a/src/components/atoms/Button.scss
+++ b/src/components/atoms/Button.scss
@@ -24,7 +24,6 @@
     width: 100%;
     height: fit-content;
     background: white;
-    box-shadow: 0px 3px 3px 0px #00000032;
     border: none;
     color: index.$navy-900;
     padding: index.$spacing-200 index.$spacing-800;
