--- a/src/components/molecules/DialogRules.scss
+++ b/src/components/molecules/DialogRules.scss
@@ -16,6 +16,7 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
+  min-height: 420px;
   position: fixed;
   top: 50%;
   left: 50%;
