--- a/src/components/molecules/PiecesContainer.scss
+++ b/src/components/molecules/PiecesContainer.scss
@@ -30,3 +30,7 @@
     height: 430px;
   }
 }
+
+li {
+  list-style: none;
+}
